#2 Property Overflow fixed

--- a/scss/overflow.scss
+++ b/scss/overflow.scss
@@ -12,11 +12,11 @@ $dataset: (
   ),
   overflow-x: (
     prefix: "overflow-x",
-    value: visible hidden scroll auto,
+    value: hidden scroll auto,
   ),
   overflow-y: (
     prefix: "overflow-y",
-    value: visible hidden scroll auto,
+    value: hidden scroll auto,
   ),
 );
 
